--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,46 @@
-#map { 
+html, body{
+	width: 100%;
+	height: 100%;
+}
+
+#textes{
+	display: flex;
+	justify-content: center;
+}
+
+fieldset p{
+  display: flex;
+	justify-content: space-between;
+}
+
+#infosMaitre{
+	padding: 1%;
+	width:30%;
+	margin: 0;
+	margin-right: 2%;
+}
+
+#infosEtudiant{
+	padding: 1%;
+	width:30%;
+	margin: 0;
+}
+
+#infosStage{
+  margin-left: auto;
+  margin-right: auto;
+	width:65%;
+}
+
+#infosStage p{
+	display: block;
+}
+
+#infosStage input{
+	display: block;
+}
+
+#map {
+	margin-top: 10px;
 	height: 100px; 
 }
