fermeture de l'overlay, gestion des champs, ajout dans la BDD

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -129,3 +129,9 @@ fieldset p{
 	display: flex;
 	flex-direction: column;
 }
+
+.close{
+	align-self: flex-end;
+	cursor: pointer;
+	width: 17px;
+}
