--- a/src/css/style.css
+++ b/src/css/style.css
@@ -91,10 +91,16 @@ fieldset p{
 }
 
 #submitBtn{
-	height: 75px;
+	height: 50px;
 	width: 25%;
 	font-size: 1.9em;
-	background-color: green;
+	background-color: darkgrey;
+	border-radius: 8px;
+}
+
+#submitBtn:hover{
+    box-shadow: 4px 4px 5px grey;
+	  background-color: rgb(100,100,100);
 }
 
 #overlay{
